Synchronized list to prevent threading issues
git-svn-id: http://svn.vuze.com/public/client@5970 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2